# z2048

./: README.md  pyproject.toml
src/: main.py
src/z2048/: __init__.py  controller.py
